--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
  <form met  hod="POST ">
      <label for="nombre">
         <span>ingrese su nombre</span> 
-        <input type="text" id="nombre">
+        <input type="text" id="nombre" placeholder="ingrese cualquier dato">
     </label> <br>
      <input type="password"><br>
      <input type="number"><br>
@@ -106,5 +106,24 @@
 <P>relleno</P>
 <a href="sonia/beta.html">beta (otra vez)</a>
 <a href="sonia/delta.html">delta (otra vez)</a></footer>
+
+<br>
+
+<div class="cont"> <img src="/connie/27420573-piezas-de-rompecabezas-de-papel-concepto-de-negocio-plantilla-diseño-infografía.png">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem est libero omnis accusantium facere eum ipsam vel. Laborum maxime non, quis consectetur sunt animi quasi deleniti soluta doloremque, doloribus nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nulla totam illum nesciunt repellendus, ab ad, placeat temporibus a est voluptatum. Aperiam amet unde odit fuga nulla, aspernatur non velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, asperiores! Quae reiciendis a, dignissimos, odio nostrum quidem nam et magnam pariatur voluptatem molestiae. Labore accusantium quisquam quod maxime, sunt nesciunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, itaque repellat. Quod magni doloribus asperiores unde. Temporibus fugit, sunt a voluptatibus reprehenderit iste ipsa omnis, inventore aut, cumque eum maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ipsum neque delectus deserunt pariatur doloribus harum sunt! Sed, aliquid exercitationem. Autem itaque odit sunt quaerat saepe dicta doloribus consectetur consequatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia harum, et reiciendis excepturi tempora cupiditate hic minus eligendi id doloribus sunt explicabo laudantium consequatur quibusdam quaerat veniam ab voluptatibus voluptates? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium amet exercitationem enim tenetur, nulla delectus aliquid accusantium neque atque velit magni eveniet repellendus omnis itaque! Qui accusamus labore itaque minima. </div>
+      <h1 class="texto-pseudoelemento">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id officiis, quam, omnis earum voluptas animi minima consequuntur similique dolorum voluptatibus fuga provident assumenda distinctio ad est at excepturi. Harum, sit!</h1>
+        <div>
+            <div class="caja1"> div de prueba "hover"</div>
+
+            <div class="caja2"> div de prueba "active"</div>
+
+            <input type="text " class="input-prueba">
+
+            <div class="caja3"> 
+                <b lang="en">test div "lang" </b> 
+                <b lang="es">caja de prueba "lang"</b> 
+            </div>
+        </div>
+      
 </body>
 </html>
