--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 <b lang="es">caja de prueba "lang"</b> 
             </div>
         </div>
-      
+      <br>
+      <h4 class="before-after">texto original</h4>
 </body>
 </html>
