--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="pagina de prueba">
     <meta name="robots" content="index">
     <meta name="robots" content="follow">  
-    <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"> </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"> </script>
     <script type="text/javascript">
 	$( document ).ready(function() {
 		$('#barra').click(function(){ 
